k8s/blog/service.yml
apiVersion: v1
kind: Service
metadata:
  name: falcaoit-ghost-blog
  labels:
    infra.cognod.es/service: falcaoit-ghost-blog

spec:
  type: NodePort
  ports:
    - port: 2368
      targetPort: 2368
      protocol: TCP
      name: ghost
  selector:
    infra.cognod.es/service: falcaoit-ghost-blog
