k8s/blog/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-blog-falcaoit
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
    # nginx.ingress.kubernetes.io/proxy-body-size: 800m
    # nginx.ingress.kubernetes.io/affinity: "cookie"
    # nginx.ingress.kubernetes.io/session-cookie-name: "route"
    # nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    # nginx.ingress.kubernetes.io/session-cookie-expires: "600"
    # nginx.ingress.kubernetes.io/session-cookie-max-age: "600"
    # nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"

spec:
  # tls:
  # - hosts:
  #   - blog.falcao.it
  #   secretName: blog-falcaoit-letsencrypt-secret-staging
  rules:
  - host: blog.falcao.it
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: falcaoit-ghost-blog
            port:
              number: 2368
